# benchmark

./: .gitignore  LICENSE.txt  README.md  example.py  pyproject.toml  test.ipynb
.github/workflows/: github-pages.yml  pypi.yml
docs/: requirements.txt
docs/source/: conf.py  index.md  modules.md  notebooks.md
docs/source/_static/: custom.css
examples/: example.py  sincerities.py
legacy/: convert_cardamom_datasets.py
legacy/data/: data_bifurcation.py  data_cycle.py  data_network4.py  data_trees.py  data_trifurcation.py
legacy/figures/: figure1.py  figure2.py  figure7.py  gen_traj.py
legacy/infer/: infer_CARDAMOM.py  infer_GENIE3.py  infer_HARISSA.py  infer_PEARSON.py  infer_PIDCpost.py  infer_SINCERITIES.py
legacy/results/: results_bifurcation.py  results_cycle.py  results_network4.py  results_trees.py  results_trifurcation.py
legacy/utils/: PIDC.jl
notebooks/: benchmark.ipynb  register.ipynb  reports.ipynb  test.ipynb
src/harissa_benchmark/: __init__.py  benchmark.py  generators.py  plotter.py  plotters.py  utils.py
src/harissa_benchmark/generators/: __init__.py  datasets.py  networks.py
src/harissa_benchmark/inferences/: __init__.py  cardamom.py  genie3.py  hartree.py  pearson.py  sincerities.py
src/harissa_benchmark/networks/: __init__.py  bn8.py  cn5.py  fns.py  trees.py
